@@ -221,6 +221,7 @@ setMethod(".gvarbrowser",
             filterPopup <- gdroplist(names(knownTypes), container=filterGroup)
             val <- ifelse("data sets" %in% names(knownTypes), "data sets", names(knownTypes)[1])
             svalue(filterPopup) <- val
+
             
             ## main tree
             tree = gtree(offspring=offspring,
@@ -234,6 +235,20 @@ setMethod(".gvarbrowser",
               multiple=multiple,
               container = group, expand=TRUE
               )
+
+            updateGroup <- ggroup(cont=group)
+            autoUpdate <- gcheckbox("Auto update", checked=TRUE, use.togglebutton=TRUE, cont=updateGroup,
+                                    handler=function(h,...) {
+                                      enabled(refreshButton) <- !svalue(h$obj)
+                                    })
+            refreshButton <- gimage("refresh", dir="stock", cont=updateGroup, handler=function(h,...) {
+              key <- svalue(filterPopup)
+              offspring.data <- knownTypes[[key]]
+              update(obj, offspring.data)
+            })
+            enabled(refreshButton) <- FALSE
+            tooltip(refreshButton) <- "Click to refresh display"
+            visible(updateGroup) <- FALSE
             
             ## update the tree this way
             addhandlerclicked(filterPopup,
@@ -244,15 +259,6 @@ setMethod(".gvarbrowser",
                               },
                               action=tree)
             
-            ## add an idle handler for updating tree every  second (or interval)
-            idleid = addhandleridle(tree, interval=interval, handler = function(h,...) {
-              key = svalue(filterPopup)
-              offspring.data = knownTypes[[key]]
-              update(h$obj, offspring.data)
-            })
-            addhandlerunrealize(tree, handler = function(h,...) {
-              gSourceRemove(h$action)},
-                                action=idleid)
             
             
             
@@ -270,6 +276,39 @@ setMethod(".gvarbrowser",
             obj <- new("gVarbrowserRGtk",block=group, widget=tree, filter=filterPopup, toolkit=toolkit)
 
 
+            ## add an idle handler for updating tree every  second (or interval)
+            idleHandler <- function(h,...) {
+
+              visible(updateGroup) <- tag(h$action, "logsize") > 2 #  50 or more
+
+              if(!svalue(autoUpdate))
+                return()
+
+
+              key = svalue(filterPopup)
+              offspring.data = knownTypes[[key]]
+              update(h$obj, offspring.data)
+
+              ## do we make timeframe longer bigger?
+              n <- ceiling(log(1+ length(.GlobalEnv), 7)) 
+              if(n != tag(h$action, "logsize")) {
+                tag(h$action, "logsize") <- n
+                idleid <- tag(h$action, "idleid")
+                gSourceRemove(idleid)
+                tag(h$action, "idleid") <-
+                  addhandleridle(tree, interval=2^n*1000, handler = idleHandler, action=h$action)
+              }
+            } 
+            idleid <- addhandleridle(tree, interval=interval, handler = idleHandler, action=obj)
+            tag(obj, "idleid") <- idleid
+            tag(obj, "logsize") <- 1    # ceiling(log(1+ length(.GlobalEnv), 10))
+            addhandlerunrealize(tree, handler = function(h,...) {
+              idleid <- tag(h$action, "idleid")
+              gSourceRemove(idleid)
+            },
+                                action=obj)
+
+            
             ## override how we compare items. Default is just by name, here we want
             ## to include class and summary
             tag(tree, "isStillThere") <- function(old, new) {
