@@ -1,3 +1,8 @@
+2010-10-25  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gvarbrowser.R (idleHandler): hacks to add in auto update
+	option. Really should rewrite this to be faster thoough.
+
 2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gcheckbox.R: add option use.togglebutton=TRUE to use toggle
